src/style.css
@reference "./tailwind.css";

* {
  font-family: "VT323", sans-serif;
}

:root {
  --font-color-light: #111111;
  --font-color-light-secondary: #6a7282;
  --font-bg-light: #f9fafb;
  --font-color-dark: #ececec;
  --font-color-dark-secondary: #9ca3af;
  --font-bg-dark: #323232;
}

html {
  --font-size-sm: clamp(0.83rem, 0.44vw + 0.72rem, 1rem);
  --font-size-base: clamp(1rem, 0.53vw + 0.87rem, 1.2rem);
  --font-size-md: clamp(1.2rem, 0.64vw + 1.04rem, 1.44rem);
  --font-size-lg: clamp(1.44rem, 0.77vw + 1.25rem, 1.73rem);
  --font-size-xl: clamp(1.73rem, 0.92vw + 1.5rem, 2.07rem);
  --font-size-xxl: clamp(2.07rem, 1.11vw + 1.8rem, 2.49rem);
  --font-size-xxxl: clamp(2.49rem, 1.33vw + 2.16rem, 2.99rem);
}

html,
body {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  min-height: 100vh;
  min-width: 100vw;
}

body {
  position: relative;
}

.hide {
  display: none;
}

.hidden-font-loader {
  position: absolute;
  overflow: hidden;
  clip: rect(0 0 0 0);
  height: 1px;
  width: 1px;
  margin: -1px;
  padding: 0;
  border: 0;
}

canvas {
  display: block;
}

#canvas {
  position: relative;
}

/* NAV MOBILE */
#nav {
  display: flex;
  position: absolute;
  top: 0;
  right: 0;
  width: 100%;
  height: 100vh;

  .ham-menu {
    position: relative;
    height: 75px;
    width: 75px;
    justify-self: right;
    margin-left: auto;
    z-index: 10;
    border-radius: 16px;

    span {
      height: 4px;
      width: 50px;
      background-color: rgb(75, 75, 75);
      position: absolute;
      border-radius: 16px;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      transition: 0.2s ease;
    }

    span:nth-child(1) {
      top: 25%;
    }
    span:nth-child(3) {
      top: 75%;
    }
  }
  .ham-menu.active {
    span:nth-child(1) {
      top: 50%;
      transform: translate(-50%, -50%) rotate(45deg);
    }
    span:nth-child(2) {
      opacity: 0;
    }
    span:nth-child(3) {
      top: 50%;
      transform: translate(-50%, -50%) rotate(-45deg);
    }
  }
  .ham-menu.dark {
    span {
      background-color: var(--font-color-dark);
    }
  }

  .menu-container {
    position: absolute;
    top: 0;
    width: 100%;
    height: 100vh;
    opacity: 0;
    pointer-events: none;
    transition: all 0.3s ease;

    .menu {
      position: fixed;
      top: 0;
      right: 0;
      height: 100vh;
      width: 100%;
      display: flex;
      flex-direction: column;
      gap: 4rem;
      justify-content: center;
      align-items: center;
    }

    background-color: rgba(255, 255, 255, 0.5);
    backdrop-filter: saturate(180%) blur(15px);
    overflow: hidden; /* Make sure ::before doesn't spill */
  }

  .menu-container.dark {
    background-color: rgba(125, 125, 125, 0.5);
  }

  .menu-container.active {
    pointer-events: all;
    opacity: 1;
  }

  /* Add metallic sheen */
  .menu-container::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 20%; /* top 20% sheen */
    background: linear-gradient(
      to bottom,
      rgba(255, 255, 255, 0.3),
      rgba(255, 255, 255, 0.05)
    );
    pointer-events: none;
  }

  .menu-container.dark::before {
    background: transparent;
  }

  .menu-container .menu button {
    --btn-font-size: 2rem;

    display: flex;
    align-items: center;
    justify-content: center;
    width: 100%;

    font-size: var(--btn-font-size);
    color: var(--font-color-light);
    background-color: transparent;
    padding: 8px;
    border: none;
    white-space: nowrap;

    cursor: pointer;
    transition: color 0.3s ease;
  }

  .menu-container .menu button:hover {
    color: black;
  }

  .menu-container.dark .menu button {
    color: var(--font-color-dark);
  }
  .menu-container.dark .menu button:hover {
    color: white;
  }
}

/* NAV DESKTOP */
@media (min-width: 916px) {
  #nav {
    height: auto;
    top: 0;

    .ham-menu {
      opacity: 0;
      pointer-events: none;
    }

    .menu-container {
      opacity: 1;
      height: fit-content;
      pointer-events: all;

      .menu {
        position: relative;
        flex-direction: row;
        gap: 5rem;
        height: fit-content;
      }
    }

    .menu-container .menu button {
      --btn-font-scale: 0.95;
      font-size: calc(var(--btn-font-size) * var(--btn-font-scale));

      width: auto;
    }
  }
}

@media (min-width: 1024px) {
  .menu-container .menu button {
    --btn-font-scale: 1.05;
    font-size: calc(var(--btn-font-size) * var(--btn-font-scale));
  }
}

/* Rest and Relax demo */
.container {
  max-width: 100%;
  width: 95%;
  height: 50%;
  overflow-x: hidden;
}

.slider-wrapper {
  display: flex;
  justify-content: flex-start;
  width: 100%;
  height: 100%;

  -webkit-mask: linear-gradient(
    90deg,
    transparent,
    white 5%,
    white 95%,
    transparent
  );
  mask: linear-gradient(90deg, transparent, white 5%, white 95%, transparent);
}

.image-list {
  width: max-content;
  height: 100%;
  gap: 1rem;
  display: flex;
  flex-wrap: nowrap;
  justify-content: flex-start;
  animation: scroll 30s linear infinite;
}

.slider-wrapper .image-list .image-item {
  height: 100%;
  padding-block: 1rem;
  object-fit: cover;
}

.xModal {
  position: absolute;
  right: 0;
  top: 0;
  padding: 8px 16px;
  border-width: 0;
  vertical-align: middle;
  text-align: center;
  white-space: nowrap;
  font-size: var(--font-size-md);
  color: white;
  background-color: black;
  cursor: pointer;
}

.xModal:hover {
  background-color: magenta;
}

@keyframes scroll {
  to {
    transform: translate(calc(-50% - 0.5rem));
  }
}

/* Toast container styles */
.toast-container {
  position: fixed;
  bottom: 20px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 9999;
  display: flex;
  flex-direction: column;
  gap: 10px;
}

/* Toast notification styles */
.toast {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: fit-content;
  overflow: hidden;
  border-radius: 8px;
  background-color: rgba(255, 255, 255, 0.5);
  backdrop-filter: saturate(180%) blur(15px);
  /* backdrop-filter: blur(15px);
  background: linear-gradient(
    rgba(241, 244, 253, 0.7) 0%,
    rgba(241, 244, 253, 0.7) 50%,
    rgba(255, 255, 255, 0.7) 80%
  ); */
  padding: 20px;
  color: #222222;
  font-size: var(--font-size-xxl);
  white-space: nowrap;
  opacity: 0;
  transform: translateY(20px);
  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.2);
}

.toast-in {
  animation: toast-in 0.5s forwards;
}

.toast-out {
  animation: toast-out 0.5s forwards;
}

/* Animation for showing the toast with mosaic effect */
/* https://codepen.io/collection/BNZzRL?cursor=eyJwYWdlIjoxMn0= */
@keyframes toast-in {
  0% {
    opacity: 0;
    transform: translateY(20px);
    filter: contrast(200%);
  }
  100% {
    opacity: 1;
    transform: translateY(0);
    filter: contrast(100%);
  }
}

/* Animation for hiding the toast with mosaic effect */
@keyframes toast-out {
  0% {
    opacity: 1;
    transform: translateY(0);
    filter: contrast(100%);
  }
  100% {
    opacity: 0;
    transform: translateY(20px);
    filter: contrast(200%);
  }
}

.shaf-btn {
  @apply bg-[var(--font-bg-light)]  md:text-xl text-2xl flex w-fit cursor-pointer border-2 p-2 border-black rounded-lg transition-transform duration-100;
}
.shaf-btn--dark {
  background: var(--font-bg-dark);
  color: var(--font-color-dark);
  border-color: var(--font-color-dark);
}
.shaf-btn:hover {
  @apply bg-black/5;
}
.shaf-btn--dark:hover {
  background: color-mix(in srgb, var(--font-bg-dark) 90%, white);
}
.shaf-btn:active {
  @apply bg-black/10;
}
.shaf-btn--dark:active {
  background: color-mix(in srgb, var(--font-bg-dark) 80%, white);
}
.shaf-btn:focus {
  @apply outline-none ring-2 ring-blue-300;
}

.shaf-btn-muted {
  @apply bg-[var(--font-bg-light)] !text-inherit !no-underline md:text-xl text-2xl flex w-fit cursor-pointer p-0.5 transition-transform rounded-lg duration-100;
}

.shaf-btn-muted:hover {
  @apply !underline;
}

.shaf-btn-muted:focus {
  @apply outline-none ring-2 ring-blue-300;
}

